--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,18 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-light bg-light justify-content-between d-flex">
+      <div>
+        <a class="navbar-brand" href="/flats">Simple Airbnb</a>
+      </div>
+      <div class='d-flex'>
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+          <a href="flats/new" role=button class="btn btn-primary my-2 my-sm-0 ml-2">Add a flat</a>
+      </div> 
+    </nav>
     <%= yield %>
   </body>
 </html>
