--- a/app/views/flats/_form.html.erb
+++ b/app/views/flats/_form.html.erb
@@ -2,6 +2,7 @@
   <%= f.input :name %>
   <%= f.input :address %>
   <%= f.input :description %>
+  <%= f.input :picture_url %>
   <%= f.input :number_of_guests %>
   <%= f.input :price_per_night %>
   <div class="d-flex">
