--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -2,17 +2,23 @@
   <h1>All our flats</h1>
   <div class="row">
     <% @flats.each do |flat| %>
-      <div class="col-sm-6 col-lg-4">
-        <div class="card mb-3 p-3">
-          <h3><%= link_to flat.name, flat_path(flat) %></h3>
-          <p><%= flat.address %></p>
-          <div class="d-flex">
-            <p class="mr-2"><i class="fas fa-user-friends"></i> <%= flat.number_of_guests %></p>
-            <p><i class="fas fa-euro-sign"></i> <%= flat.price_per_night %></p>
+      <div class="col-xs-12 col-sm-6 col-lg-4">
+        <div class="card mb-3">
+          <div class="card-image">
+            <img src="<%=flat.picture_url %>" alt="flat picture" class="w-100">
           </div>
-          <hr>
-            <%= link_to "More info", flat_path(flat)%>
-            <%= link_to "Edit", edit_flat_path(flat)%>
+          <div class="card-info mb-3 p-3">
+            <h3><%= link_to flat.name, flat_path(flat) %></h3>
+            <p><%= flat.address %></p>
+            <div class="d-flex">
+              <p class="mr-2"><i class="fas fa-user-friends"></i> <%= flat.number_of_guests %></p>
+              <p><i class="fas fa-euro-sign"></i> <%= flat.price_per_night %></p>
+            </div>
+            <hr>
+              <%= link_to "More info", flat_path(flat)%>
+              <%= link_to "Edit", edit_flat_path(flat)%>     
+              <%= link_to "Delete", flat_path(flat), method: :delete, data: { confirm: "Are you sure ?" } %>        
+          </div>
         </div>
       </div>
     <% end %>
