--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,4 +1,4 @@
-<div class="map" style="background-image: url('https://source.unsplash.com/1600x900/?rooms)"></div>
+<div class="banner" style="background-image: url(<%=@url %>);"></div>
 <div class="container mt-3">
   <div class="row">
     <div class="col-8">
@@ -25,8 +25,7 @@
           </div>
           <input type="submit" value="Book" class="btn btn-success mt-2" style="width: 100%">
         </form>
-    </div>
-    <div class="col-4">
+      </div>
       <div class="card p-3 mb-3">
         <h3>Details</h3>
         <div class="d-flex">
